v3/v3.4/bookinfo/01-ingress-gateway.yaml
# Vendored from the gateway-injection sample referenced by the Red Hat OSSM 3.4 guide:
# https://raw.githubusercontent.com/istio-ecosystem/sail-operator/main/chart/samples/ingress-gateway.yaml
# Upstream blob SHA at vendoring time: 009cfc72950fdede8c4c7fec2e0d54c098d66181
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
  ports:
  - {name: http2, port: 80, targetPort: 8080}
  - {name: https, port: 443, targetPort: 8443}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
spec:
  replicas: 1
  selector:
    matchLabels: {istio: ingressgateway}
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: ingressgateway
        app.kubernetes.io/component: bookinfo-ingressgateway
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: istio-proxy
        image: auto
