v3/v3.4/bookinfo/02-bookinfo-gateway.yaml
# Vendored from the Red Hat OSSM 3.4 documented Bookinfo gateway sample:
# https://raw.githubusercontent.com/openshift-service-mesh/istio/release-1.24/samples/bookinfo/networking/bookinfo-gateway.yaml
# Upstream blob SHA: 54e86888c651268356911772fdca379f7aa8d23e
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway
    app.kubernetes.io/component: bookinfo-ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts: ["*"]
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts: ["*"]
  gateways: [bookinfo-gateway]
  http:
  - match:
    - uri: {exact: /productpage}
    - uri: {prefix: /static}
    - uri: {exact: /login}
    - uri: {exact: /logout}
    - uri: {prefix: /api/v1/products}
    route:
    - destination:
        host: productpage
        port: {number: 9080}
