v3/v3.4/bookinfo/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: istio-ingressgateway
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  wildcardPolicy: None
